--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     <nav>
         <form action="">
             <label for="">What task would you like to add?</label><br><br>
-            <input type="text" id="open"><br><br>
-            <a id="addtask" href="#" onclick="hide()"><button>ADD TASK</button></a>
+            <input type="text" id="open"><br>
+            <small></small>
+            <br>
+            <a id="addtask" href="#" ><button>ADD TASK</button></a>
         </form>
     </nav>
     <script src="./index.js"></script>
